United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6953576 bottom_type for matched AddPNodes doesn't always agree with ideal
6953576 : bottom_type for matched AddPNodes doesn't always agree with ideal

Details
Type:
Bug
Submit Date:
2010-05-18
Status:
Resolved
Updated Date:
2010-09-24
Project Name:
JDK
Resolved Date:
2010-06-01
Component:
hotspot
OS:
solaris_9
Sub-Component:
compiler
CPU:
sparc
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs19

Related Reports
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
6715633 added an assert to make sure that the adr_type of nodes doesn't change during matching.  If the address pieces are matched separately this assert can fail because the logic in AddPNode::mach_bottom_type isn't the equivalent to AddPNode::bottom_type.  The fix is to simply capture the bottom_type when transforming the nodes.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/b5fdf39b9749
                                     
2010-05-19



Hardware and Software, Engineered to Work Together