6953576: bottom_type for matched AddPNodes doesn't always agree with ideal

Reviewed-by: kvn